调整文字和mtu url的适配

--- a/public/locales/zh-CN/translation.json
+++ b/public/locales/zh-CN/translation.json
@@ -1,5 +1,5 @@
 {
-    "plat":"LLM在线平台",
+    "plat":"红山/C龙文化-Chatbot Voicebot平台",
     "helloWorld": "你好，世界",
     "menu-clearchats":"清除所有对话",
     "menu-clearchats_confirm":"确认清除所有对话",
